--- a/css_basic/base.css
+++ b/css_basic/base.css
@@ -3,4 +3,19 @@ html, body{
 	height: 100%;
 	min-height: 100%;
 }
+html, body, article, aside, h1, p. a, h2, h3, aside {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
 
+body {
+	line-height: 1;
+}
+
+article, aside, footer, header {
+	display: block;
+}
